@@ -1,7 +1,8 @@
 Changes in version 0.1.2.3-alpha - 2006-10-??
   o Minor features:
-    - If most authorities set a (newly defined) BadExit flag for a server, do
-      not consider it as a general-purpose exit.
+    - If most authorities set a (newly defined) BadExit flag for a server,
+      do not consider it as a general-purpose exit.  Only consider
+      authorities that advertise themselves as listing bad exits.
 
   o Minor features, controller:
     - Add a REASON field to CIRC events; for backward compatibility, this
